tests/code_samples/invalid/first.t
(S0, 1):  (1 R hault) #stuff
(S0, 0:  (1 L S0 #also valid since "(" is being ignored anywat

S1 ,,,, 1: 1 L S0 #also valid since ',' is being ignored

S0,1:1,L,S0 #also valid since , being ignored means its treated as a space

Y,1:1 R S0 #valid since y isnt a dir
Y,1:1 R R #valid since y isnt a dir
Y,1:1 S0 S0 #valid since y isnt a dir

1,Y:1 R S0 #valid since y isnt a dir

R,1:1 R S0 


6,6,6:2 2

(Y,A):1

T,A:1,2,3

T,A : 1,2,3

S0, 1 :: 1 R hault 
S0, 1 :cooment: 1 R hault 

S0, 1 :cooment : 1 R hault 


::11 2
1 2 3 4 5